[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "abi3info"
dynamic = ["version"]
description = "A library for abi3 and other CPython API information"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "William Woodruff", email = "william@yossarian.net" }
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.10",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Security",
]
dependencies = []
requires-python = ">=3.8"

[project.urls]
Homepage = "https://pypi.org/project/abi3info/"
Issues = "https://github.com/woodruffw/abi3info/issues"
Source = "https://github.com/woodruffw/abi3info"
Documentation = "https://woodruffw.github.io/abi3info/"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "pretend",
  "coverage[toml]",
]
lint = [
  "bandit",
  "flake8",
  "black",
  "isort",
  "interrogate",
  "mypy",
]
doc = [
  "pdoc >= 13.0.0",
]
dev = [
  "build",
  "toml",
  "abi3info[test,lint,doc]",
]

[tool.isort]
multi_line_output = 3
known_first_party = "abi3info"
include_trailing_comma = true

[tool.interrogate]
exclude = ["env", "test", "codegen"]
ignore-semiprivate = true
fail-under = 100

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.bandit]
exclude_dirs = ["./test"]

[tool.black]
line-length = 100
